# monitoreo

./: .dockerignore  .env.local  .env.production.example  .gitignore  .mise.toml  AUDITORIA_MASTER.md  Cargo.toml  audit.py  justfile  pnpm-lock.yaml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/web/: README.md  nginx.conf  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
crates/database/: Cargo.toml
crates/database/src/: lib.rs
crates/database/src/entities/: active_alert_entity.rs  agent_metrics_entity.rs  audit_entity.rs  device_entity.rs  discovered_device_entity.rs  location_entity.rs  mod.rs  network_file_entity.rs  network_scan_entity.rs  notification_channel_entity.rs  notification_log_entity.rs  notification_template_entity.rs  remote_agent_entity.rs  role_entity.rs  security_event_entity.rs  system_setting_entity.rs  used_refresh_token_entity.rs  user_entity.rs  user_session_entity.rs
crates/database/src/repositories/: audit_repository.rs  auth_repository.rs  dashboard_repository.rs  discovery_repository.rs  mod.rs  network_file_repository.rs  notification_repository.rs  report_repository.rs  security_repository.rs  settings_repository.rs  telemetry_repository.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs
crates/domain/src/models/: audit.rs  discovery.rs  infrastructure_file.rs  mod.rs  notification.rs  report.rs  security.rs  session.rs  settings.rs  telemetry.rs  user.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/config/: mod.rs  runtime_config.rs
crates/infrastructure/src/crypto/: jwt.rs  mod.rs  opaque.rs  password.rs
crates/infrastructure/src/discovery/: mod.rs  oui_lookup.rs  scan_engine.rs
crates/infrastructure/src/handlers/: audit_handler.rs  auth_handler.rs  dashboard_handler.rs  devices_handler.rs  discovery_handler.rs  infrastructure_file_handler.rs  locations_handler.rs  mod.rs  notification_handler.rs  report_handler.rs  security_handler.rs  settings_handler.rs  telemetry_handler.rs  worker_config_handler.rs  worker_stats_handler.rs
crates/infrastructure/src/middleware/: audit_middleware.rs  mod.rs  rate_limit.rs  rbac.rs
crates/infrastructure/src/notifications/: mod.rs  smtp_adapter.rs  worker.rs
crates/infrastructure/src/reports/: crypto_signer.rs  mod.rs  pdf_renderer.rs
crates/infrastructure/src/security/: detection_engine.rs  mod.rs
crates/infrastructure/src/storage/: mod.rs  regional_storage.rs
crates/infrastructure/src/telemetry/: ingestion_engine.rs  mod.rs
crates/infrastructure/src/workers/: mod.rs  scheduler.rs  session_cleanup.rs
crates/infrastructure/tests/: discovery_tests.rs  security_tests.rs  worker_resilience_tests.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
data/migrations/: 0001_init_auth.sql  0002_change_sessions_to_datetime.sql  0003_rtr_replay_protection.sql  0004_locations_and_settings.sql  0004_notification_engine.sql  0005_devices_and_alerts.sql  0005_infrastructure_files.sql  0006_audit_trail.sql  0006_locations_hierarchy.sql  0007_agent_telemetry.sql  0009_sla_aggregation_queries.sql  0011_security_events.sql  0012_network_discovery.sql
data/seeds/: 000_seed_roles.sql  001_seed_admin.sql  002_seed_locations.sql  003_seed_devices_and_alerts.sql  004_seed_locations_hierarchy.sql
guia/: COOLIFY-PROXY-CONFIG.md  PROMPT_MAESTRO.md
guia/adr/: ADR-0001-arquitectura-hexagonal.md  ADR-0002-configuracion-tipeada-secretos.md  ADR-0003-stack-backend-rust-axum.md  ADR-0004-persistencia-mysql-seaorm-docker.md  ADR-0005-migraciones-seeding.md  ADR-0006-rbac-sessions-audit.md  ADR-0007-manejo-errores.md  ADR-0008-seguridad-auth-paseto.md  ADR-0009-rate-limiting.md  ADR-0010-testing-calidad.md  ADR-0011-estandares-desarrollo.md  ADR-0012-herramientas-desarrollo.md  ADR-0013-infraestructura-docker-compose.md  ADR-0014-monitoreo-tareas-criticas.md  ADR-0015-tokio-jobs.md  ADR-0016-documentacion-openapi-utoipa.md  ADR-0017-frontend-sveltekit-svelte5.md  ADR-0018-sintonia-cli.md  ADR-0019-coolify-deploy.md  ADR-0020-monitoreo-infraestructura-regional.md  ADR-0021-local-first-sync-offline.md  comando.md  justifile.md  (+1 more)
scripts/: db-migrate-prod.ps1  db-migrate.ps1  db-reset.ps1  db-status.ps1
tests/: settings_thresholds_test.rs
(+49 files in other folders)
