# Cargo.toml - Raíz del Workspace de Rust
# Vinculado con ADR-0003-stack-backend-rust-axum.md y ADR-0007-manejo-errores.md

[workspace]
members = [
    "crates/domain",
    "crates/database",
    "crates/infrastructure",
    "crates/shared_types",
    "apps/api"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
secrecy = "0.10"
