# crates/infrastructure/Cargo.toml
# Adaptador de entrada - Rutas, Controladores y Enrutador de Axum
# Vinculado con ADR-0003-stack-backend-rust-axum.md

[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
database = { path = "../database" }
shared_types = { path = "../shared_types" }
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true }
axum-governor = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
argon2 = "0.5"
jsonwebtoken = "9"
secrecy = "0.10"
rand_core = "0.6"
sha2 = "0.11"
hex = "0.4"
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
lettre = "0.11"
