# crates/shared_types/Cargo.toml
# Tipos de contrato compartidos entre backend y frontend
# Vinculado con ADR-0011-estandares-desarrollo.md y ADR-0016-openapi.md

[package]
name = "shared_types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
utoipa = { version = "5.0", features = ["chrono", "uuid"] }
